# prj_feegow

./: .gitignore  Dockerfile  README.md  docker-compose.override.yml  docker-compose.yml  pyproject.toml  requirements.txt
.astro/: config.yaml
dags/: feegow_airflow_dag.py
prj_dlt_feegow/: pipeline_feegow.py  requirements.txt  source_feegow.py
prj_dlt_feegow/.dlt/pipeline_state/: feegow_state.json
