[project]
name = "prj-feegow"
version = "0.1.0"
description = ""
authors = [
    {name = "rafael.amorim",email = "raffaekk@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-cloud-bigquery (==3.11.0)",
    "google-cloud-bigquery-storage (>=2.34.0,<3.0.0)",
    "dlt (>=1.18.2,<2.0.0) ; python_full_version >= \"1.18.2\" and python_full_version < \"2.0.0\""
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
