[tool.poetry]
name = "prj-feegow"
version = "0.1.0"
description = ""
authors = ["rafael.amorim <raffaekk@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12,<3.15"
dlt = ">=1.18.2,<2.0.0"
psycopg2-binary = "^2.9.11"
dbt = "^1.0.0.40.10"
dotenv = "^0.9.9"
python-dateutil = "^2.9.0.post0"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
